packaging & build.sh update

--- a/go/packaging/darwin-pkg/flat/Distribution.tmpl
+++ b/go/packaging/darwin-pkg/flat/Distribution.tmpl
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <installer-gui-script minSpecVersion="1">
-	<title>sharik</title>
-	<background alignment="topleft" file="root/Applications/sharik-{{.version}}.app/Contents/MacOS/assets/icon.png"/>
+	<title>Sharik</title>
+	<background alignment="topleft" file="root/Applications/Sharik-{{.version}}.app/Contents/MacOS/assets/icon.png"/>
 	<choices-outline>
 	    <line choice="choiceBase"/>
     </choices-outline>
