--- a/go/packaging/darwin-pkg/flat/base.pkg/PackageInfo.tmpl
+++ b/go/packaging/darwin-pkg/flat/base.pkg/PackageInfo.tmpl
@@ -1,5 +1,5 @@
 <pkg-info format-version="2" identifier="dev.marchello.base.pkg" version="{{.version}}" install-location="/" auth="root">
 	<bundle-version>
-		<bundle id="dev.marchello" CFBundleIdentifier="dev.marchello" path="./Applications/sharik.app" CFBundleVersion="{{.version}}"/>
+		<bundle id="dev.marchello" CFBundleIdentifier="dev.marchello" path="./Applications/Sharik.app" CFBundleVersion="{{.version}}"/>
     </bundle-version>
 </pkg-info>
