--- a/go/packaging/linux-deb/DEBIAN/control.tmpl
+++ b/go/packaging/linux-deb/DEBIAN/control.tmpl
@@ -1,6 +1,6 @@
-Package: sharik
+Package: Sharik
 Architecture: amd64
 Maintainer: @markon
 Priority: optional
 Version: {{.version}}
-Description: A new Flutter project.
+Description: Sharik is an app for sending files to almost any device. No internet connection needed.
