dependency updates & fixed list of ports & ui animation improvements

--- a/go/packaging/linux-snap/snap/snapcraft.yaml.tmpl
+++ b/go/packaging/linux-snap/snap/snapcraft.yaml.tmpl
@@ -4,8 +4,9 @@ version: '{{.version}}'
 summary: Sharing files across devices with ease
 description: |
   Sharik is an app for sending files to almost any device. No internet connection needed.
-confinement: devmode
-grade: devel
+confinement: classic
+grade: stable
+license: MIT
 apps:
   sharik:
     command: sharik
