--- a/go/packaging/linux-deb/DEBIAN/control.tmpl
+++ b/go/packaging/linux-deb/DEBIAN/control.tmpl
@@ -1,6 +1,6 @@
-Package: sharik
+Package: {{.packageName}}
 Architecture: amd64
-Maintainer: marchellodev <marchellodev@gmail.com>
+Maintainer: @{{.author}}
 Priority: optional
 Version: {{.version}}
-Description: Sharik is an app for sending files to almost any device. No internet connection needed.
+Description: {{.description}}
